--- a/FOSS/3.md
+++ b/FOSS/3.md
@@ -10,11 +10,17 @@ permalink: /FOSS/3/
 NOBODY has the capacity to undestand your pain better than YOU. 
 ## Introduction and Fundamentals (20 modules)
 
-Let's say you were looking for a friendly, professional, yet potentially contentious 6-minute graduate/faculty university seminar by knowledgeable researchers and specialists doing a [deep dive discussion with highly divergent views on this controversial and emotional topic.](https://illuminate.google.com/library?play=NoP2Oe_fD1D31) 
+Let's say you were just looking for ***summary*** of this HUGE topic ... let's say you wanted superficial, yet professional-sounding conversation, eg *like something you'd hear on NPR* ... that easy to generate, their are all kinds of ways to get a not-exactly-all-that-well-informed 6-minute discussion of this topic by seemingly-intelligent *nice*, reasonable people doing a [podcast attempting to understand how tough it is to study this complicated, controversial and emotional topic.](https://illuminate.google.com/library?play=NoP2Oe_fD1D31). 
+
+**Pain is a topic that harder than practically everyone thinks!**  *MOST people don't even understand their own pain and do all kinds of stupid things to run from that pain*, let alone the pain that other people have to deal with.
 
 ### Module 1: **Introduce The Full Syllabus** 
 
-Just to get an idea for the *lay of the land* in the world of pain management, first try to ***grok*** the full listing of modules 2 through 200 into your brain. Don't read it, just skim the full listing to get an idea of what's covered. Then you might want to skip down below to the module(s) that strikes your eye ... after you're done with this, then proceed with Module 2.
+In the first module, the objective is *just* to get an idea for the *lay of the land* in the world of pain management, first try to ***grok*** the full Table of Contents listing of modules 2 through 200 into your brain. In other words, at first, don't try to really ***read*** it -- instead, just skim the full Table of Contents listing to get an idea of what's covered. 
+
+After you've skimmed it, THEN go back and actually ***read*** it more slowly, thoughtfully, carefully. As you do that, you might want to skip down below to the module(s) that strikes your eye OR maybe a phrase that pique my interest ... but the point of Module 1 is just to have some comprehension of how massive this topic is.
+
+After you're done with understanding the TOC or lay of the land in Module 1, sleep on it and give it at least a day or so before proceeding to Module 2.  You will want to spend a couple days ruminating on each module; the 200 modules are intended to be completed in a two year time-frame, and serious students of this topic will probably spend more mastering it, eg there are people who spend YEARS on just hatha yoga for pain OR Tai chi and qi gong.
 
 ## Introduction and Fundamentals
 - [Module 2: Cognitive and emotional factors influencing pain](#module-2-cognitive-and-emotional-factors-influencing-pain)
