--- a/FOSS/4.md
+++ b/FOSS/4.md
@@ -16,7 +16,9 @@ Let's say you were looking for a friendly, professional, yet potentially content
 
 ### Module 1: **Introduce The Full Syllabus** 
 
-Just to get an idea for the *lay of the land* in the world of prayer and worry management, first try to ***grok*** the full listing of modules 2 through 200 into your brain. Don't read it, just skim the full listing to get an idea of what's covered. Then you might want to skip down below to the module(s) that strikes your eye... after you're done with this, then proceed with Module 2.
+In the first module, the objective is *just* to get an idea for the *lay of the land* in the world of prayer life enhancement, first try to ***grok*** the full Table of Contents listing of modules 2 through 100 into your brain. In other words, at first, don't try to really ***read*** it -- instead, just skim the full Table of Contents listing to get an idea of what's covered. 
+
+After you've skimmed it, THEN go back and actually ***read*** it more slowly, thoughtfully, carefully. As you do that, you might want to skip down below to the module(s) that strikes your eye OR maybe a phrase that pique my interest ... after you're done with understanding the lay of the land in Module 1, sleep on it and give it a day or so before proceeding Module 2.  You will want to spend a couple days ruminating on each module; the 100 modules are intended to be completed in one year's time, or possibly more.
 
 ## Introduction and Fundamentals
 - [Module 2: Cognitive and emotional foundations of worry and anxiety](#module-2-cognitive-and-emotional-foundations-of-worry-and-anxiety)
