--- a/FOSS/3.md
+++ b/FOSS/3.md
@@ -10,9 +10,9 @@ permalink: /FOSS/3/
 NOBODY has the capacity to undestand your pain better than YOU. 
 ## Introduction and Fundamentals (20 modules)
 
-Let's say you were just looking for ***summary*** of this HUGE topic ... let's say you wanted superficial, yet professional-sounding conversation, eg *like something you'd hear on NPR* ... that easy to generate, their are all kinds of ways to get a not-exactly-all-that-well-informed 6-minute discussion of this topic by seemingly-intelligent *nice*, reasonable people doing a [podcast attempting to understand how tough it is to study this complicated, controversial and emotional topic.](https://illuminate.google.com/library?play=NoP2Oe_fD1D31). 
+Let's say you were just looking for ***summary*** of this HUGE topic ... let's say you wanted superficial, yet professional-sounding conversation, eg *like something you'd hear on NPR* ... that low level of comptency is remarkably easy to generate ... there are all kinds of ways to get a not-exactly-all-that-well-informed 6-minute discussion of this topic by seemingly-intelligent *nice*, reasonable people [*or AI, that will work for less*] doing a [podcast attempting to understand how tough it is to study this complicated, controversial and emotional topic.](https://illuminate.google.com/library?play=NoP2Oe_fD1D31). 
 
-**Pain is a topic that harder than practically everyone thinks!**  *MOST people don't even understand their own pain and do all kinds of stupid things to run from that pain*, let alone the pain that other people have to deal with.
+**Pain is a topic that MUCH, MUCH HARDER than practically everyone thinks!**  *MOST people don't even understand their own pain and do all kinds of stupid things, eg have a drink or two, to hide from that pain* ... it's geometrically harder to think about the pain that other people have to deal with, but trying to understand pain that you don't feel yourself is what **legitimate** compassion is about.
 
 ### Module 1: **Introduce The Full Syllabus** 
 
